# typesetting_workshop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-packages.yml
packaging/: typesetting_workshop.spec
src/typesetting_workshop/: __init__.py  __main__.py  app.py
src/typesetting_workshop/models/: __init__.py  entities.py
src/typesetting_workshop/services/: __init__.py  folder_watch.py  importer.py  layout.py  print_service.py  renderer.py  repository.py
src/typesetting_workshop/ui/: __init__.py  app_window.py  main_window.py  preview_canvas.py  preview_page.py  preview_panel.py  settings_page.py  settings_panel.py
tests/: test_importer.py  test_layout.py  test_renderer.py  test_repository.py
